# FalsificationLanguage

./: README.md  pyproject.toml
demos/: f16Model.py  staliroBoInterface.py  test_F16_findbox.py  test_F16_rtamt.py  test_monitor.py
falsi_lang/: LanguageBox.py  LanguageBoxGeneral.py  __init__.py  box.py  drawing.py  model.py  new_monitor.py
